Apply suggestions from code review
Co-authored-by: Hiroshi Miura <miurahr@linux.com>